plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
    id "org.owasp.dependencycheck" version "8.0.2"
}

ext {
    gitHubErosbVersion = "1.14.1"
    orgJsonVersion = "20220924"
    googleCodeGsonVersion = "2.10.1"
    javaxCacheVersion = "1.1.1"
    orgEhcacheVersion = "3.10.8"
    springDocVersion = "1.6.14"
    jakartaPersistenceVersion = "3.1.0"
}

group = 'com.distasilucas'
version = '1.0.0-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    implementation "org.springframework.boot:spring-boot-starter-cache"
    implementation "com.github.erosb:everit-json-schema:${gitHubErosbVersion}"
    implementation "org.json:json:${orgJsonVersion}"
    implementation "com.google.code.gson:gson:${googleCodeGsonVersion}"
    implementation "javax.cache:cache-api:${javaxCacheVersion}"
    implementation "org.ehcache:ehcache:${orgEhcacheVersion}"
    implementation "org.springdoc:springdoc-openapi-ui:${springDocVersion}"
    implementation "jakarta.persistence:jakarta.persistence-api:${jakartaPersistenceVersion}"

    compileOnly "org.projectlombok:lombok"

    runtimeOnly "org.mariadb.jdbc:mariadb-java-client"

    annotationProcessor "org.projectlombok:lombok"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "io.projectreactor:reactor-test"
}

tasks.named('test') {
    useJUnitPlatform()
}
